--- a/regression_analysis_bilingual.ipynb
+++ b/regression_analysis_bilingual.ipynb
@@ -1627,7 +1627,9 @@
     "\n",
     "iii.\tنمودار مقیاس- مکان <code>Scale-location</code> : در این نمودار ریشه دوم باقیمانده‌های استاندارد شده نشان داده‌ می‌شود. نقاط بلند بزرگترین مقادیر باقیمانده هستند.\n",
     "\n",
-    "نمودار  <code>Cook’s distance</code>: در این نمودار نقاطی که روی خط رگرسیون تاثیر فراوانی می‌گذارند که می‌توان به عنوان نقاط پرت تلقی شوند نشان داده می‌شود.\n"
+    "نمودار  <code>Cook’s distance</code>: در این نمودار نقاطی که روی خط رگرسیون تاثیر فراوانی می‌گذارند که می‌توان به عنوان نقاط پرت تلقی شوند نشان داده می‌شود.\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -1635,9 +1637,13 @@
    "id": "37a0b0dc",
    "metadata": {},
    "source": [
+    "<div dir='rtl' style=\"font-family: 'B Nazanin', 'IRANSans', 'Tahoma'; font-size: 30px; line-height: 1.8; text-align: justify;\">\n",
+    "رگرسیون خطی چندگانه\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "<div dir=\"rtl\"style=\"font-family: 'B Nazanin', 'IRANSans', 'Tahoma'; font-size: 16px; line-height: 1.8; text-align: justify;\">\n",
     "\n",
-    "### رگرسیون خطی چندگانه\n",
     "\n",
     "رگرسیون خطی چندگانه با فرم کلی زیر تعریف می‌شود:\n",
     "\n",
